Removed --add-opens ALL-UNNAMED JVM args
* This was fixed in the upstream controller 5.15.20.x per https://community.tp-link.com/en/business/forum/topic/710680

Verified to be working as expected on the latest 5.15 and 6.2 tags

Signed-off-by: Matt Bentley <mbentley@mbentley.net>